
 Summary
 =======
 
   Version 0.71
   Version 0.70
   Version 0.69
   Version 0.68
   Version 0.67
   Version 0.66
   Version 0.65
   Version 0.64

-----------------------------------------------------------------------
 Version 0.71
 ============

 Released on 

 Total files count: 
 Total lines count: 
 maintainer/run-distcheck.sh:

 New features and improvements:

   - 

 Bug fixes:

   - Fix solde computing when archiving accounts. 

 Other changes:

   - 

-----------------------------------------------------------------------
 Version 0.70
 ============

 Released on 2017-05-07

 Total files count:    845 files
 Total lines count: 576954 lines
 maintainer/run-distcheck.sh: real	8m1.915s

 New features and improvements:

   - Accounts balance arguments are improved.
   - Entries balance is removed.
   - Entry page is now able to export the content of its view (todo #1239).
   - Account balance render page is now able to export the content of its view.
   - Exportable standard class format is reviewed (todo #1351).
   - Exporters can provide their own stream format (todo #1411).
   - Main window has a new 'minimal' display mode.
   - Operation template properties: fields are not masked by the scrollbar (todo #1457).
   - Plugins now advertize their DB model with their canonical name (todo #1461).
   - Reconciliation page: homogeneize footer display.
   - Recurrent operation is not generated is its first amount is zero (todo #1459).
   - Recurrent operation validation is now said 'accounting' (todo #1460).
   - Restore assistant let the user display the metadata of the archive (todo #1450).
   - Settlement page: a footer paned let the user align footer amounts with the treeview (todo #1467).
   - Settlement page: homogeneize footer display.
   - User may choose display at startup, and when a dossier is opened or closed.
   - Headers completeness is now checked at make distcheck time (todo #1462).