@@ -308,8 +308,6 @@
 1472 2017- 6-16 imported bat treeview: enlarge the page when displayed
                 does it have an horiz scrollbar ?
 
-1473 2017- 6-16 deleting a single entry of an operation doesn't work ?
-
 1474
 
 -----------------------------------------------------------------------
@@ -1169,6 +1167,9 @@
 1469 2017- 4-18 entry page ext filter: when a row is moved up or down,
                 review sensitivity of and/or combobox
      2017- 5- 3 fixed
+
+1473 2017- 6-16 deleting a single entry of an operation doesn't work ?
+     2017- 6-16 fixed
 
 -----------------------------------------------------------------------
  P. Wieser - Created on 2014, may 2nd
